# PlanktoScope

./: .editorconfig  .envrc  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE.md  File_config_Louis.txt  File_config_Louis_2.txt  Focus_actuation.py  GPS_HAT.py  Libraires_installation.sh  Makefile  README.md  README.mkd  Toggle_fan.py  assembly_guide.md  baeic.py  beginner_mode.md  calibration.md  checkmake.ini  config.json  debug.md  easy_install.md  ecotaxa.txt  end_test.txt  expert_setup.md  flake.nix  getting_started.md  hardware.json  history_working_pi  index.md  install.rst  justfile  main.py  metadata.json  mkdocs.yml  (+17 more)
control/: .flake8  README.md  main.py  pyproject.toml
control/adafruithat/: main.py
control/adafruithat/planktoscope/: display.py  identity.py
control/adafruithat/planktoscope/camera/: hardware.py  mqtt.py
control/adafruithat/planktoscope/imager/: __init__.py  mqtt.py  raspimjpeg.py  streamer.py
control/adafruithat/planktoscope/imagernew/: mqtt.py
control/planktoscope/: stepper.py
control/planktoscope/imager/: state_machine.py
control/planktoscopehat/: main.py
control/planktoscopehat/planktoscope/: light.py  module.py  stepper.py  uuidName.py
control/planktoscopehat/planktoscope/camera/: hardware.py  mjpeg.py  mqtt.py  test_preview.py
control/planktoscopehat/planktoscope/imager/: __init__.py  mqtt.py  streamer.py
control/planktoscopehat/planktoscope/imagernew/: __init__.py  mqtt.py  stopflow.py
control/planktoscopehat/shush/: board.py
control/planktoscopehat/shush/boards/: __init__.py
control/pscopehat/: default-v2.3.hardware.json  main.py
control/pscopehat/planktoscope/: light.py
control/pscopehat/planktoscope/imager/: __init__.py  raspimjpeg.py
control/pscopehat/shush/boards/: shush_mk1.py
controller/: MCP4725.py  Makefile  README.md  buller.py  bullertest.py  focus.py  helpers.py  identity.py  justfile  led.py  ledo.py  main.py  mqtt.py  planktoscope-org.controller.service  pump.py  pyproject.toml
controller/adafruithat/: display.py  main.py  stepper.py
controller/adafruithat/planktoscope/: __init__.py  integrity.py  light.py  mqtt.py  stepper.py
controller/adafruithat/planktoscope/camera/: hardware.py
controller/autofocus/: main.py  planktoscope-org.controller.autofocus.service
controller/bubbler/: DAC.py  MCP4725.py  README.md  bubler.py  gpio.py  gpio.py$  justfile  main.py  planktoscope-org.controller.bubbler.service  test.js
controller/camera/: README.md  hardware.py  justfile  mqtt.py  planktoscope-org.controller.camera.service
controller/display/: README.md  justfile  main.py  planktoscope-org.controller.display.service  test.js
controller/display/e-paper/examples/: test.py
controller/e-paper/examples/: epd_2in9_V2_test.py
controller/focus/: README.md  justfile  main.py  planktoscope-org.controller.focus.service  test.js
controller/imager/: README.md  justfile  main.py  main2.py  mqtt.py  package-lock.json  planktoscope-org.controller.imager.service  stopflow.py  test.js
controller/imager/camera/: hardware.py  mqtt.py
controller/light/: LM36011.py  MCP4725.py  README.md  justfile  light.py  main.py  planktoscope-org.controller.light.service  test.js
controller/motor/: motor.py
controller/planktoscopehat/: bubbler.py  buller.py  focus.py  light.py  light_v26.py  light_v30.py  main.py  module.py  pump.py
controller/planktoscopehat/motor/: registers.py
controller/planktoscopehat/planktoscope/: focus.py  integrity.py  light.py  module.py  mqtt.py  pump.py  stepper.py
controller/planktoscopehat/planktoscope/camera/: __init__.py  hardware.py  mjpeg.py  mqtt.py  test.py
controller/planktoscopehat/planktoscope/imager/: __init__.py  mqtt.py  stopflow.py
controller/pump/: README.md  justfile  main.py  planktoscope-org.controller.pump.service  test.js
device-backend/control/: .flake8  README.md  main.py  pyproject.toml
device-backend/control/adafruithat/: main.py
device-backend/control/planktoscopehat/: main.py
device-backend/processing/segmenter/: Dockerfile  README.md  apt-packages  main.py  pyproject.toml
documentation/: .gitignore  Caddyfile  Dockerfile  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
documentation/docs/: changelog.md  faq.md  index.md  research.md
documentation/docs/assets/: .gitignore  hardware
documentation/docs/community/: code-of-conduct.md  getting_in_touch.md  index.md  license.md  research.md  trainings.md  usergroups.md
documentation/docs/contribute/: github_workflow.md  hardware_development.md  software_development.md
documentation/docs/hardware/: accessories.md  assembly_guide.md  hat_hardware.md  maintenance_repair.md  manufacturing.md
documentation/docs/operation/: clone-sd.md  getting_started.md  index.md  maintenance.md  networking.md  sample-collection.md  software-customization.md  software-upgrades.md  user-interface.md
documentation/docs/reference/: index.md
documentation/docs/reference/hardware/: hat.md  (+2 more)
documentation/docs/setup/: index.md
documentation/docs/software/: create_sd.md  easy_install.md  expert_setup.md  standard_install.md  update_devicetree.md
documentation/docs/stylesheets/: extra.css
documentation/docs/troubleshooting/: index.md
documentation/docs/usage/: getting_started.md  mqtt_messages.md  remote_access.md  ui_guide.md
processing/segmenter/: Dockerfile  README.md  main.py  pyproject.toml
processing/segmenter/planktoscope/: identity.py
segmenter/: Dockerfile  Makefile  README.md  analyze_acquisition.py  apt-packages  blur_metrics.py  justfile  live_seg_metrics.py  main.py  planktoscope-org.segmenter.service  planktoscope_classifier_hierarchical_v5.py  planktoscope_segmenter_original.py  pyproject.toml  run_segment_live.sh  segment_live.py  test.js
segmenter/.backup_20260213_151706/: flows.json  planktoscope_segmenter_original.py  segment_live.py
segmenter/planktoscope/: README.md  identity.py  mqtt.py
segmenter/planktoscope/segmenter/: __init__.py  ecotaxa.py  encoder.py  live.py  operations.py  streamer.py
(+976 files in other folders)
