[tool.poetry]
package-mode = false
name = "planktoscope-controller"
description = "Controller of PlanktoScope hardware"
# For simplicity, we follow the definition of "Maintainer" from
# https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project , which says:
# "Maintainers: Contributors who are responsible for driving the vision and managing the
# organizational aspects of the project".
# Here, we only list the current maintainers of the PlanktoScope backend software.
maintainers = [
  "Ethan Li <lietk12@gmail.com>",
  "Sonny Piers <sonny@fairscope.com",
]
# For simplicity, we follow the definition of "Author" from
# https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project , which says:
# "Author: The person/s or organization that created the project".
# Here, we only list the authors of the PlanktoScope backend software.
authors = ["Romain Bazile <romain@oceantrotter.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.planktoscope.org"
repository = "https://github.com/PlanktoScope/PlanktoScope/tree/main/controller"
documentation = "https://docs.planktoscope.community/"
keywords = ["planktoscope"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11.2"
paho-mqtt = "^1.6.1"
loguru = "^0.5.3"
readerwriterlock = "^1.0.9"

[tool.poetry.group.hw.dependencies]
rpi-gpio = "^0.7.0"
adafruit-blinka = "^8.19.0"
adafruit-circuitpython-motorkit = "^1.6.3"
adafruit-circuitpython-motor = "^3.3.1"
adafruit-ssd1306 = "^1.6.2"
adafruit-platformdetect = "^3.45.2"
smbus2 = "^0.4.1"
spidev = "^3.7"
gpiozero = "^2.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
mypy = "^1.9.0"
types-paho-mqtt = "^1.6.0.20240106"
picamera2 = "^0.3.25"
ruff = "^0.11.10"

[tool.ruff]
line-length = 100

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
# We are gradually introducing type-checking as we rewrite each module; we have to rewrite some
# modules before we can enable these flags:
# disallow_untyped_calls = true
# disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
# We are gradually introducing type-checking as we rewrite each module; we haven't rewritten the
# following files yet:
exclude = [
  'adafruithat/main\.py',
  'adafruithat/planktoscope/__init__\.py',
  'adafruithat/planktoscope/display\.py',
  'adafruithat/planktoscope/identity\.py',
  'adafruithat/planktoscope/integrity\.py',
  'adafruithat/planktoscope/light\.py',
  'adafruithat/planktoscope/mqtt\.py',
  'adafruithat/planktoscope/stepper\.py',
  'adafruithat/planktoscope/imager/.*',
  'planktoscopehat/main\.py',
  'planktoscopehat/main_thread\.py',
  'planktoscopehat/shush/.*',
  'planktoscopehat/planktoscope/__init__\.py',
  'planktoscopehat/planktoscope/identity\.py',
  'planktoscopehat/planktoscope/integrity\.py',
  'planktoscopehat/planktoscope/light\.py',
  'planktoscopehat/planktoscope/module\.py',
  'planktoscopehat/planktoscope/mqtt\.py',
  'planktoscopehat/planktoscope/stepper\.py',
  'planktoscopehat/planktoscope/imager/.*',
  'planktoscopehat/planktoscope/motor/motor\.py',
  'planktoscopehat/planktoscope/motor/registers\.py',
]

[tool.poe.tasks]
fmt = "ruff format"
lint-mypy-adafruithat = "mypy adafruithat"
lint-mypy-planktoscopehat = "mypy planktoscopehat"
lint-mypy = ["lint-mypy-adafruithat", "lint-mypy-planktoscopehat"]
lint-ruff = "ruff check"
lint = ["lint-ruff", "lint-mypy"]
fmt-check = "ruff format --check"
check = ["fmt-check", "lint"]
