[project]
name = "planktoscope-controller"
version = "0.0.1"
description = "Controller of PlanktoScope hardware"
requires-python = ">=3.13.5,<4.0"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["planktoscope"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "paho-mqtt>=2.1.0,<3",
    "loguru>=0.7.3,<0.8",
    "readerwriterlock>=1.0.9,<2",
    "picamera2>=0.3.31,<0.4",
    "rpi-gpio>=0.7.0,<0.8",
    "adafruit-blinka>=8.66.2,<9",
    "adafruit-circuitpython-motorkit>=1.6.18,<2",
    "adafruit-circuitpython-motor>=3.4.17,<4",
    "adafruit-ssd1306>=1.6.2,<2",
    "adafruit-platformdetect>=3.84.0,<4",
    "smbus2>=0.5.0,<0.6",
    "spidev~=3.5",
    "gpiozero>=2.0.1,<3",
    "adafruit-circuitpython-mcp4725>=1.4.18",
    "aiomqtt>=2.4.0",
    "aiofiles>=24.1.0",
]

[project.urls]
Homepage = "https://www.planktoscope.org"
Repository = "https://github.com/PlanktoScope/PlanktoScope/tree/main/controller"
Documentation = "https://docs.planktoscope.community/"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0,<0.38",
    "mypy>=1.18.1,<2",
    "picamera2>=0.3.31,<0.4",
    "ruff>=0.13.3,<0.14",
    "types-aiofiles>=24.1.0.20250822",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
# We are gradually introducing type-checking as we rewrite each module; we have to rewrite some
# modules before we can enable these flags:
# disallow_untyped_calls = true
# disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
# We are gradually introducing type-checking as we rewrite each module; we haven't rewritten the
# following files yet:
exclude = [
  'main.py',
  'adafruithat/stepper.py',
  'adafruithat/display.py',
]
follow_imports = "silent" # required for exclude
[[tool.mypy.overrides]]
module = ["paho.*", "gpiozero"]
follow_untyped_imports = true

[tool.poe.tasks]
fmt = "ruff format"
lint-mypy = "uv run mypy --explicit-package-bases ."
lint-ruff = "ruff check"
lint = ["lint-ruff", "lint-mypy"]
fmt-check = "ruff format --check"
check = ["fmt-check", "lint"]
