[tool.poetry]
name = "planktoscope-docs"
# Note: PEP 440 requires pre-releases to be formatted like "2023.7.0b0" rather than
# "2023.7.0-beta.0", which is different from the Semantic Versioning schema
version = "2023.9.0b0"
description = "Documentation for the PlanktoScope project"
# For simplicity, we follow the definition of "Maintainer" from
# https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project , which says:
# "Maintainers: Contributors who are responsible for driving the vision and managing the
# organizational aspects of the project".
# Here, we only list the current maintainers of the PlanktoScope documentation project.
maintainers = [
  "Thibaut Pollina <thibaut.pollina@gmail.com>",
]
# For simplicity, we follow the definition of "Author" from
# https://opensource.guide/how-to-contribute/#anatomy-of-an-open-source-project , which says:
# "Author: The person/s or organization that created the project".
# Here, we only list the authors of the PlanktoScope documentation project.
authors = [
  "Thibaut Pollina <thibaut.pollina@gmail.com>",
]
license = "CC-BY-SA-4.0"
readme = "README.md"
homepage = "https://www.planktoscope.org"
repository = "https://github.com/PlanktoScope/PlanktoScope"
# FIXME: once we have the docs up at docs.planktoscope.org, we should update this URL
documentation = "https://planktoscope.github.io/PlanktoScope/"
keywords = ["documentation", "planktoscope"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.docs.dependencies]
python = "^3.8"
mkdocs = "^1.4.3"
mkdocs-charts-plugin = "^0.0.9"
mkdocs-glightbox = "^0.3.4"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-material-extensions = "^1.1.1"
mkdocs-material = "^9.2.1"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.0"
# Note: we do not allow the mkdocs-table-reader-plugin in this project because it pulls in a
# large number of dependencies, several of which (especially pandas) take an unacceptably long time
# to install.
Pygments = "^2.15.1"
pymdown-extensions = "^10.0.1"
LinkChecker = "^10.2.1"
poethepoet = "^0.22.0"
imgp = "^2.8"
pillow = "9.5.0"

[tool.poe.tasks]
optimize-png-photos = "imgp --convert --optimize --quality 95 --recurse --overwrite docs/images/assembly_guide/*.png"
optimize-widths = "imgp --res 1200x0 --optimize --quality 95 --recurse --overwrite docs/images"
optimize-compression = "imgp --eraseexif --optimize --progressive --quality 85 --recurse --overwrite docs/images"
preview = "mkdocs serve --dev-addr localhost:8000"
build = "mkdocs build --clean --strict"
build-check = "mkdocs build --clean --strict --no-directory-urls"
check-links = "linkchecker --config .linkcheckerrc site"
check = ["build-check", "check-links"]
